# ML-draftarea

./: .gitignore  README.md  data.db  excel_into_db.py  main.py  masterdb.db  pyproject.toml  randomtestdata.ods  randomvalidationdata.ods  requirements.txt  run_db_stuff.py  vaestorakenne_ja_tyollisuus.db  vuosikate.db  vuosikateekselinpyorittaja.py
aktivaatiofunktiot/: activation_functions.py
apupalikoita/: data_mapper.py  kirjanesimerkki.py  mapping.py  testisti.py  tietokantayhdistelija.py  time_formatting.py  vuosikateekselinpyorittaja.py
apupalikoita ja muuta/: testisti.py  tietokantayhdistelija.py  vuosikateekselinpyorittaja.py
entities/: data_fetching.py  data_prep.py  tests.py
exceleita/: Alueelle_pendeloivat.xlsx  Vakilukuja.xlsx  katteet2000_2001_eur.xlsx  katteet2002_2006.xlsx  katteet2009.xlsx  katteet2010.xlsx  katteet2018.xlsx  vaestorakenne.xlsx
palaverimuistioita/: 8-11-23.txt
queries/: queries.py
services/: data_fetching.py  data_prep.py  training.py
talousdata/: Alueella_tyossakayvat.xlsx  Aluueelle_toihon_tulevat.xlsx  Asuinkunnassa_tyoskentelevat.xlsx  katteet2000_2001_eur.xlsx  katteet2002_2006.xlsx  katteet2007.xlsx  katteet2008.xlsx  katteet2009.xlsx  katteet2010.xlsx  katteet2011.xlsx  katteet2012.xlsx  katteet2013.xlsx  katteet2014.xlsx  katteet2015.xlsx  katteet2016.xlsx  katteet2017.xlsx  katteet2018.xlsx  katteet2019.xlsx  katteet2020.xlsx  suomilukuina_tau_kan002.xlsx
versio1/: draft1.py
versio2/: draft2.py
versio3/: draft3.py  draft3b.py
you_cant_touch_this_financials/: katteet2002_2006.xlsx  katteet2008.xlsx  (+7 more)
(+1 files in other folders)
