[tool.poetry]
name = "ml-draftarea"
version = "0.1.0"
description = ""
authors = ["Eero Antikainen <eero.antikainen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
odfpy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
